--- a/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
+++ b/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
@@ -1885,3 +1885,14 @@ Contact: tongt@hkbu.edu.hk},
 	keywords = {Rank test,Combinatorial optimization,Distribution‐free test,Non‐bipartite matching,Nonparametric test,Occupancy distribution},
 	pages = {515-530}
 }
+
+@article{rosenblatt2016optimality,
+	title={On the optimality of averaging in distributed statistical learning},
+	author={Rosenblatt, Jonathan D and Nadler, Boaz},
+	journal={Information and Inference: A Journal of the IMA},
+	volume={5},
+	number={4},
+	pages={379--404},
+	year={2016},
+	publisher={Oxford University Press}
+}
