--- a/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
+++ b/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
@@ -1896,3 +1896,11 @@ Contact: tongt@hkbu.edu.hk},
 	year={2016},
 	publisher={Oxford University Press}
 }
+
+@inproceedings{harchaoui2009kernel,
+	title={Kernel change-point analysis},
+	author={Harchaoui, Zaid and Moulines, Eric and Bach, Francis R},
+	booktitle={Advances in neural information processing systems},
+	pages={609--616},
+	year={2009}
+}
