--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -1,6 +1,6 @@
-\documentclass[journal]{IEEEtran}
+%\documentclass[journal]{IEEEtran}
 %\documentclass[draft]{IEEEtran}
-%\documentclass[onecolumn,draftclsnofoot]{IEEEtran}
+\documentclass[onecolumn,draftclsnofoot]{IEEEtran}
 
 \input{preamble.tex}
 
